Update 1.0.1 - Euphoria Patches.md

--- a/1.0.1 - Euphoria Patches.md
+++ b/1.0.1 - Euphoria Patches.md
@@ -5,7 +5,7 @@ Euphoria Patches is an updated version of Overimagined Shaders and comes in a di
 This update adds bug fixes and minor changes
 
 # Fixes
-- Fixed Multiple compile errors
+- Fixed multiple compile errors
 
 # Changes
 - Replaced the old watermark with the new one. Thanks again to Elysia
