Update 1.0.0 - Euphoria Patches.md

--- a/1.0.0 - Euphoria Patches.md
+++ b/1.0.0 - Euphoria Patches.md
@@ -73,7 +73,7 @@ This update adds many more settings, features and other changes
 - Added an option to disable the shader water (makes it look like vanilla water)
 - Silhouette option which makes blocks darker when facing away from the sun with intensity option
 - Situational glowing ores option has been added where ores only glow underground and are reflective if there is skylight
-- Tonemap options (ACES, Burgess, Lottes & Uncharted 2)
+- Tonemap options (ACES, Burgess, Lottes & Uncharted 2 and many more)
 - World time animation option which should be enabled when playing with the gamerule /doDaylightCycle off so that clouds, aurora and other things still animate.
 - Added Fun Settings
     - Mirror dimension which makes everything looks like in Doctor Strange or Inception
@@ -97,7 +97,9 @@ This update adds many more settings, features and other changes
 - Added the soul sand valley overhaul setting which makes lava, blazes, firecharges, magma cubes and magma blocks blue
 - Added an option which disables rain above the clouds
 - Added the World Blur While Sneaking option which only activate the world blur option while sneaking
-- Added a retro Look option
+- Added a retro Look option and many retro effects
+- Added border effect
+- Added Camera settings such as halftone effect
 - Added Floor noise options
 
 
@@ -106,7 +108,6 @@ This update adds many more settings, features and other changes
 - Improved the look of rainbow auroras
 - Tweaked Euphoria Patches profile to have the developers favorite settings :)
 - Made Overworld beams reflect on blocks
-- Probably a lot more that we missed
 
 ## Obsolete Options
 
@@ -116,3 +117,5 @@ This update adds many more settings, features and other changes
 - Scene-Aware Light Shafts toggle
 - Cloud Speed and Width options
 - Speed of waving foliage and leaves
+
+# Probably a lot more that we missed
