Update 1.3 - Euphoria Patches.md

--- a/1.3 - Euphoria Patches.md
+++ b/1.3 - Euphoria Patches.md
@@ -1,5 +1,35 @@
 # Euphoria Patches Changelog 1.3
 Euphoria Patches dev versions are available on **[Ko-Fi](https://ko-fi.com/spaceagle17)** or **[Patreon](https://www.patreon.com/SpacEagle17)**
+## Euphoria Patches 1.3.2
+### Changes
+- Added a daylight stars option where stars shine during the day
+- Added a sun glare intensity slider
+- Added an option which decreases the lighting the deeper you submerge in the ocean
+- The night cloud remove option now also works with Reimagined clouds
+- The Cloud shadow changes intensity depending on the cloud transparency option now
+- Improved the emissive warped and nether wart block animation
+- Removed the more end stars option and replaced it with another intensity in the end star amount slider
+- Added many blocks to block.properties thanks to the community
+- Added a frozen time option which freezes all shader animations. Works best with /tick freeze. Perfect for screenshot comparisons
+- Added weather particle color multiplier sliders
+- Added an end portal beam setting thanks to [@gri573](https://github.com/gri573)!
+- Added an option which awakens the souls of soul sand when standing on it
+- Mostly add labpbr support back, lava and seasons and overlay noise should now work much better, at least on iris/oculus
+- Interactive foliage now works in third person on iris
+- Prevent mods which abuse the lightmap to blind you when holding a light source with a light level bigger than 15 (this is cursed from the mod)
+- Improved lightmap normals from placed light sources and handheld light sources drastically, they are now as good as they can be
+- Added a pinker cherry leaves option
+- Added a beacon emission option
+- Improved bedrock noise handling in the nether
+- Added lightmap curve options
+- Added handheld and blocklight lightmap normals intensity sliders
+### Fixes
+- Fixed Overworld beams breaking light shafts during the day and improved their coexistence with other volumetric effects. They should be fixed for good now
+- Fixed Nether Stems and Dragon egg not emitting light with ACL
+- Watermark no longer waves underwater
+- Fixed the dragon death effect not working in 1.21
+- Many effects from EP now work correctly with blindness or darkness
+- Prevent sand and moss noise from ever happening in other dimensions except the overworld
 ## Euphoria Patches 1.3.1
 Small Fixes
 
