Update 1.0 - Euphoria Patches.md

--- a/1.0 - Euphoria Patches.md
+++ b/1.0 - Euphoria Patches.md
@@ -4,6 +4,17 @@ Euphoria Patches is an updated version of Overimagined Shaders and comes in a di
 
 This update adds many more settings, features and other changes
 
+# Euphoria Patches 1.0.1
+## Fixes
+- Fixed multiple compile errors
+
+## Changes
+- Replaced the old watermark with the new one. Thanks again to Elysia
+- Added Furnaces and campfire to Soul Sand Overhaul
+- Updated to Complementary r5.0.1
+
+# Euphoria Patches 1.0
+
 ## New Shader Settings
 
 - Adjustable auto generated normals resolution
